--- a/Home.html
+++ b/Home.html
@@ -8,16 +8,16 @@
     <link rel="stylesheet" href="./css/index.css">
 </head>
 <body class="bg-gray-100">
-    <div class="container mx-auto p-6">
+    <form id="form" class="container mx-auto p-6">
         <h1 class="text-3xl text-center font-bold mb-4">Random Story Generator</h1>
         <div class="space-y-4 text-center">
-            <input id="name" type="text" placeholder="Enter a character's name" class="p-2 border rounded w-1/2">
+            <input id="char" type="text" placeholder="Enter a character's name" class="p-2 border rounded w-1/2">
             <input id="setting" type="text" placeholder="Enter a setting" class="p-2 border rounded w-1/2">
             <input id="action" type="text" placeholder="Enter an action" class="p-2 border rounded w-1/2">
-            <button id="generateStory" class="bg-blue-500 text-white p-2 rounded">Generate Story</button>
+            <button id="generateStory" class="bg-blue-500 text-white p-2 rounded" type="submit">Generate Story</button>
         </div>
         <div id="story" class="mt-6 text-xl text-center font-semibold"></div>
-    </div>
-    <script src="app.js"></script>
+    </form>
+    <script src="./js/index.js"></script>
 </body>
 </html>
